--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">MOBIFONE</h3>
+                            <h3 class="mb-0">MOBIFONE 3</h3>
                             <div class="subheading mb-3">INTERNSHIP</div>
                             <p>Front-end: WEB API Warehouse management software.</p>
                         </div>
